# ghostmon

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/agent/: metrics.py
app/api/: main.py  middleware.py  ratelimit.py
app/cli/: main.py
app/core/: config.py  observability.py
app/tasks/: item_poller.py  probes.py  retention.py  scheduler.py  trends.py
docker/: prometheus.yml
docs/: roadmap.md
docs/adr/: 0001-target-architecture-zabbix-alternative.md
migrations/: env.py  script.py.mako
migrations/versions/: 0414a77d051d_escalation_policies.py  05b8d67d749f_add_host_channels.py  157f9b404dd7_add_monitor_results.py  2262219b743a_add_maintenance_windows.py  35e58836356a_problem_events.py  3a74991325ac_add_templates_and_template_items.py  3b0c2fc4cfbf_add_host_address_and_item_source_config.py  3c013fb9a5b6_discovery_rules.py  3ef3f9905b19_add_retries_and_retry_interval_on_.py  6668dc620fe7_add_triggers_and_channel_min_severity.py  67ae1a6497a1_add_snmp_monitor_type.py  (+10 more)
static/: confirm.js  style.css  theme.js  zk.js
templates/: base.html  dashboard.html  error.html  login.html
tests/: conftest.py  test_agent.py  test_auth.py  test_channels.py  test_charts.py  test_dashboard.py  test_discovery.py  test_escalation.py  test_field_crypto.py  test_health.py  test_hosts.py  test_ingest.py  test_item_poller.py  test_item_triggers.py  test_maintenance.py  test_monitors.py  test_notifications.py  test_observability.py  test_oidc.py  test_probes.py  test_problems.py  test_rate_limit.py  test_retention.py  test_scheduler_job.py  test_security.py  test_security_hardening.py  test_ssrf.py  test_templates.py  test_trends.py  test_triggers.py  test_user_service.py  test_web_ui.py  test_zk.py
(+102 files in other folders)
