[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghostmon"
version = "0.1.0"
description = "GhostMonitor - Self-hosted infrastructure monitoring, a free Zabbix alternative"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "StackOps HQ" }]
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "apscheduler>=3.11.0",
    "argon2-cffi>=23.1.0",
    "authlib>=1.3.2",
    "python-jose[cryptography]>=3.3.0",
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "python-multipart>=0.0.32",
    "jinja2>=3.1.4",
    "itsdangerous>=2.2.0",
    "aiosmtplib>=5.1.0",
    "croniter>=6.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
ghostmon = "app.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

# Third-party libraries without maintained type stubs.
[[tool.mypy.overrides]]
module = ["jose.*", "authlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
